--- a/EVChargerAPI/appsettings.json
+++ b/EVChargerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "${MYSQL_CONNECTION_STRING}"
+    "DefaultConnection": "MYSQL_CONNECTION_STRING"
   },
   "Jwt": {
     "Key": "${JWT_SECRET_KEY}",
